feat(events): add events CRUD - in progress
